# proftaak

./: .gitattributes  .gitignore  CMakeLists.txt  colours.h  main.cpp  opencv-main.cpp  reload_on_file_list_change.bat  user-config.example.h.txt  user-config.h
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yaml
.github/workflows/: build-and-run-tests.yml  cpp.yml  cpplint.yml
docs/: Doxyfile
libs/ECS/: CMakeLists.txt
libs/ECS/ECS/: Component.cpp  GameObject.cpp  Scene.cpp  SceneManager.cpp  Vector3.cpp
libs/ECS/include/: Component.h  GameObject.h  LerpController.h  Mesh.h  Scene.h  SceneManager.h  Transform.h  Vector3.h
libs/ECS/src/: LerpController.cpp  Mesh.cpp  Scene.cpp  SceneManager.cpp
libs/celshader/: CMakeLists.txt
libs/celshader/include/: CelShader.h
libs/celshader/include/cs/: CelShader.h  func.h
libs/celshader/shaders/: celShader.frag  celShader.vs  celShaderFrag.h  celShaderVS.h
libs/celshader/src/: CelShader.cpp  func.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/objLoader/include/: ObjModel.h
libs/objLoader/src/: Matrix.cpp  ObjModel.cpp
libs/tigl/: CMakeLists.txt  tigl.cpp
libs/tigl/include/: tigl.h
libs/tigl/src/: tigl.cpp
libs/utest/: CMakeLists.txt
libs/utest/include/: utest.h
libs/utest/include/utest/: assertions.h  test_case_exception.h  test_exception.h
libs/utest/src/: test_case_exception.cpp  test_exception.cpp  utest.cpp
modules/: CMakeLists.txt
modules/ECS/: CMakeLists.txt
modules/ECS/include/: Animator.h  CharacterStats.h  Collider.h  CombatComponent.h  CombatController.h  Component.h  GameObject.h  LerpController.h  Mesh.h  OpenCVVideoCapture.h  ParentTransform.h  PlaneMesh.h  Scene.h  SceneManager.h  Spawner.h  TagEnum.h  Transform.h  UnitTypeEnum.h  VirtualCamera.h
modules/ECS/include/gui/: Gui.h  GuiComponent.h  StrGuiComponent.h
modules/ECS/include/statemachine/: AIContext.h  CombatState.h  State.h  WalkState.h
modules/ECS/src/: Animator.cpp  CharacterStats.cpp  Collider.cpp  CombatComponent.cpp  CombatController.cpp  Component.cpp  GameObject.cpp  LerpController.cpp  Mesh.cpp  OpenCVVideoCapture.cpp  ParentTransform.cpp  PlaneMesh.cpp  Scene.cpp  SceneManager.cpp  Spawner.cpp  Transform.cpp  VirtualCamera.cpp
modules/ECS/src/gui/: Gui.cpp  GuiComponent.cpp  StrGuiComponent.cpp
modules/ECS/src/statemachine/: AIContext.cpp  CombatState.cpp  State.cpp  WalkState.cpp
modules/Utils/: CMakeLists.txt
modules/Utils/include/: CurrencyManager.h  GameTimer.h  ImageProvider.h  InputHandler.h  TeamHelper.h
modules/Utils/src/: CurrencyManager.cpp  GameTimer.cpp  ImageProvider.cpp  InputHandler.cpp  TeamHelper.cpp
modules/objLoader/: CMakeLists.txt
modules/objLoader/include/: Matrix.h  ModelManager.h  ObjModel.h
modules/objLoader/src/: ModelManager.cpp  ObjModel.cpp
modules/prefabs/: CMakeLists.txt
modules/prefabs/include/: AIPrefab.h  CurrencyDisplayPrefab.h  TowerPrefab.h
modules/prefabs/src/: AIPrefab.cpp  CurrencyDisplayPrefab.cpp  TowerPrefab.cpp
modules/template/include/: dummy.h
modules/template/src/: dummy.cpp
modules/textureLoader/include/: TextureLoader.h
modules/textureLoader/src/: TextureLoader.cpp
modules/time/: CMakeLists.txt
modules/time/include/: GameTimer.h
modules/time/src/: GameTimer.cpp
modules/vision/: CMakeLists.txt
modules/vision/include/: CardDetector.h  ImageFilter.h
modules/vision/src/: CardDetector.cpp  ImageFilter.cpp  opencv-main.cpp
resource/models/: map.obj.test
tests/currency-manager/: test.cpp
tests/hello-world/: CMakeLists.txt  test.cpp
tests/template/: CMakeLists.txt  test.cpp
tests/time/: CMakeLists.txt  test.cpp
